Fixed specificity on sidebar-search.  Fixed spacing on the notifier - still do not like it though

--- a/src/main/webapp/resources/scss/main.scss
+++ b/src/main/webapp/resources/scss/main.scss
@@ -145,7 +145,7 @@ a {
   }
 }
 
-.sidebar-search {
+input.sidebar-search {
   // Extends
   // Includes
   @include box-shadow(inset 0 1px darken($color-sidebar, 10%));
@@ -156,8 +156,8 @@ a {
   border: 1px solid rgba(0, 0, 0, 0.36);
   border-radius: 30px;
   height: 2.2rem;
-  padding: 0 0 0 1.9em;
-  width: 75%;
+  padding: 0 0 0 2.3em;
+  width: 90%;
   // Color
   background-color: darken($color-sidebar, 5%);
   background-image: url("/css/img/search_light.svg");
@@ -174,24 +174,24 @@ a {
   // Other
   outline: none;
 
-  //&:focus {
-  //  @include transition (all .5s ease-in-out);
-  //  background-color: lighten($color-sidebar, 2%);
-  //  background-image: url("/css/img/search_light.svg");
-  //  background-position: 1em center;
-  //  background-repeat: no-repeat;
-  //  -webkit-background-size: 16px;
-  //  -moz-background-size: 16px;
-  //  background-size: 16px;
-  //}
-  //&::-webkit-search-cancel-button,
-  //&::-webkit-search-decoration {
-  //  margin-right: 5px;
-  //}
-  //&:focus::-webkit-input-placeholder,
-  //&:focus::-webkit-input-placeholder {
-  //  color: #c6c8c8;
-  //}
+  &:focus {
+    @include transition (all .5s ease-in-out);
+    background-color: lighten($color-sidebar, 2%);
+    background-image: url("/css/img/search_light.svg");
+    background-position: 1em center;
+    background-repeat: no-repeat;
+    -webkit-background-size: 16px;
+    -moz-background-size: 16px;
+    background-size: 16px;
+  }
+  &::-webkit-search-cancel-button,
+  &::-webkit-search-decoration {
+    margin-right: 5px;
+  }
+  &:focus::-webkit-input-placeholder,
+  &:focus::-webkit-input-placeholder {
+    color: #c6c8c8;
+  }
 }
 
 .sidebar-inner {
